setting video max height and width to avoid image cropping

--- a/packages/carousel/styles/gallery.css
+++ b/packages/carousel/styles/gallery.css
@@ -180,7 +180,9 @@
 }
 .videoFullScreenSlide {
   width: 100%;
+  max-width: 1085px;
   height: 100%;
+  max-height: 610px;
   object-fit: contain;
 }
 @media (min-width: 600px) {
